Changes for fixing bug #15018, #15132
SVN-Revision: 23526

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -511,7 +511,8 @@ div.autocomplete {
       border:1px solid #888;
       margin:0px;
       padding:0px;
-      overflow:auto; 
+      word-wrap:break-word;
+      overflow:auto;
     }
     div.autocomplete ul {
       list-style-type:none;
