Bug 17353 - Clinical diagnosis is hidden if only 1 match found
SVN-Revision: 24537

--- a/css/combo.css
+++ b/css/combo.css
@@ -18,6 +18,7 @@
     position:relative; /* for calculating scroll offsets */
     zoom:1;
     overflow-x:hidden;
+    height:40px;
 }
 .x-combo-list-hd {
     font:bold 11px tahoma, arial, helvetica, sans-serif;
